--- a/src/main/resources/templates/dashboardView.html
+++ b/src/main/resources/templates/dashboardView.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="contsiner">
 <h2>Dashboard Page</h2>
-<p th:text="${quote}"></p>
+<p th:text="${msg}"></p>
 <a href="dashboard" class="btn btn-primary">Get New Quotes</a>
 <a href="/logout">Logout</a>
 </div>
