--- a/src/main/resources/templates/registerView.html
+++ b/src/main/resources/templates/registerView.html
@@ -13,7 +13,7 @@
 
 <body>
 	<div class="container">
-		<h2>Reset Password Here</h2>
+		<h2>Register Here</h2>
 		<font color="green">
 			<h3 th:text="${msg}"></h3>
 		</font>
