--- a/src/main/resources/templates/resetPwdView.html
+++ b/src/main/resources/templates/resetPwdView.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>ResetForm</title>
+  <title>Reset Password</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -10,31 +10,35 @@
 </head>
 <body>
 <div class="container">
-	<h2>Reset Password Update Here</h2>
-  <font color="green"><h3 th:text="${smsg}"></h3></font>
+    <h2>Reset Password Here</h2>
+    <font color="red"><h3 th:text="${smsg}"></h3></font>
     <font color="red"><h3 th:text="${emsg}"></h3></font>
-<form th:object="${resetDto}" th:action="@{/resetPwd}" method="post">
-	<table>
-		<tr>
-			<td>Enter Username</td>
-		<td><input type="text" th:field="*{email}" readonly/></td>
-		</tr>
-		<tr><td>Old Password</td>
-		<td><input type="password" th:field="*{oldPwd}"/></td>
-		</tr>
-		<tr><td>New Password</td>
-		<td><input type="password" th:field="*{newPwd}"/></td>
-		</tr>
-	<tr><td>Confirm Password</td>
-		<td><input type="password" th:field="*{confirmPwd}"/></td>
-		</tr>
-		<tr><td>
-		</td>
-		<td><input type="submit" value="Update" class="btn btn-primary"/></td></tr>
-	</table>
-</form>
-
+    <font color="red"><h3 th:text="${msg}"></h3></font>
+    <form th:object="${resetPwdDto}" th:action="@{/resetPwd}" method="post">
+        <table>
+            <tr>
+                <td>Enter Username</td>
+                <td><input type="text" th:field="*{email}" readonly/></td>
+            </tr>
+            <tr>
+                <td>Enter Old Password</td>
+                <td><input type="password" th:field="*{oldPwd}" required/></td>
+            </tr>
+            <tr>
+                <td>Enter New Password</td>
+                <td><input type="password" th:field="*{newPwd}" required/></td>
+            </tr>
+            <tr>
+                <td>Confirm New Password</td>
+                <td><input type="password" th:field="*{confirmPwd}" required/></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><input type="submit" value="Reset Password" class="btn btn-primary"/></td>
+            </tr>
+        </table>
+    </form>
+    Don't have an account? <a href="/register">Register</a>
 </div>
-
 </body>
 </html>
